--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-google-maps": "^9.4.5",
+    "react-phone-number-input": "^3.0.25",
     "react-scripts": "3.4.1"
   },
   "scripts": {
