--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mdbreact": "^4.27.0",
     "pg": "^8.3.0",
     "react": "^16.13.1",
+    "react-chat-window": "^1.2.1",
     "react-dom": "^16.13.1",
     "react-google-maps": "^9.4.5",
     "react-phone-number-input": "^3.0.25",
