--- a/package.json
+++ b/package.json
@@ -15,14 +15,13 @@
     "lodash": "^4.17.19",
     "mdbreact": "^4.27.0",
     "pg": "^8.3.0",
-    "react": "^16.13.1",
     "react-chat-window": "^1.2.1",
-    "react-dom": "^16.13.1",
     "react-google-maps": "^9.4.5",
     "react-phone-number-input": "^3.0.25",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-stripe-checkout": "^2.6.3",
     "socket.io": "^2.3.0",
     "talkjs": "^0.14.2"
   },
