--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
+    "@reach/combobox": "^0.10.5",
+    "@react-google-maps/api": "^1.9.12",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -23,7 +25,8 @@
     "react-scripts": "3.4.1",
     "react-stripe-checkout": "^2.6.3",
     "socket.io": "^2.3.0",
-    "talkjs": "^0.14.2"
+    "talkjs": "^0.14.2",
+    "use-places-autocomplete": "^1.3.10"
   },
   "scripts": {
     "start": "react-scripts start",
