--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-chat-window": "^1.2.1",
     "react-google-maps": "^9.4.5",
     "react-phone-number-input": "^3.0.25",
+    "react-places-autocomplete": "^7.3.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
